@@ -1,5 +1,7 @@
 2011-05-09  Miloslav Trmač  <mitr@redhat.com>
 
+	* src/server_add_admin (main): New option --name.
+
 	* src/server_add_admin.py (AddAdminConfiguration._read_configuration):
 	Fix so that this doesn't crash on every start.
 
